--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html">
                 <h1>MovieReviews</h1>
             </a>
-            <div>
+            <form>
                 <input type="search" name="buscador" id="buscador" placeholder="Buscar Pelicula/Serie"><br>
                 <div class="opciones_container">
                     <div>
@@ -33,7 +33,7 @@
                         <label for="serie">Serie</label>    
                     </div>
                 </div>
-            </div>
+            </form>
             <nav>
                 <ul>
                     <li><a href="#nosotros">Sobre Nosotros</a></li>
